--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "workbox-window": "^7.3.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
