--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "volleyball-sorter",
+  "name": "next-play",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@tailwindcss/vite": "^4.0.12",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
@@ -41,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.12",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
